--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -35,8 +35,7 @@
 </head>
 
 <body layout="row" ng-class="{ie: isIE, smart: !screenGtSmall}" ng-cloak>
-<div ui-view class="cs-app"><div change-plan ng-if="changePlanStatus" change-plan-status="changePlanStatus" no-plan="true" after-cancel="afterCancelChangePlan()"></div></div>
-
+<div ui-view class="cs-app"></div>
 <!-- build:js assets/js/app.min.js -->
 <script src="../bower_components/jquery/dist/jquery.js"></script>
 <script src="../bower_components/moment/min/moment.min.js"></script>
@@ -78,9 +77,9 @@
 <script src="js/directives/ui-nav.js"></script>
 <script src="js/directives/ui-butterbar.js"></script>
 <script src="js/directives/form-validator.js"></script>
-<script src="js/directives/change-plan.js"></script>
 <script src="js/directives/fixed-table-header.js"></script>
 <script src="js/services/resources.js"></script>
+<script src="js/services/change-plan.js"></script>
 <script src="js/services/values.js"></script>
 <script src="js/services/constants.js"></script>
 <script src="js/controllers/signin.js"></script>
