--- a/Front/src/tpl/userManagement.html
+++ b/Front/src/tpl/userManagement.html
@@ -17,7 +17,7 @@
 				To have additional users, you can upgrade to higher plan.
 			</span>
 			<div class="plan-btn">
-				<md-button class="md-raised copy-btn">Upgrade plan</md-button>
+				<md-button class="md-raised copy-btn" ng-click="upgradePlan()">Upgrade plan</md-button>
 			</div>
 		</div>
 		<div ng-show="invitationUserCount<plan.userLimit">
