--- a/Front/src/tpl/ts-report.html
+++ b/Front/src/tpl/ts-report.html
@@ -3,7 +3,7 @@
         <div class="right-select">
             <div class="cs-subform-control">
                 <md-select class="cs-subform-select" ng-model="query.tsReferenceId">
-                    <md-option value="{{tsReference.id}}" ng-repeat="tsReference in tsReferences">{{tsReference.name}}</md-option>
+                    <md-option value="{{tsReference.tsId}}" ng-repeat="tsReference in tsReferences">{{tsReference.name}}</md-option>
                 </md-select>
             </div>
 
