注册之后页面

--- a/Front/src/tpl/signup-success.html
+++ b/Front/src/tpl/signup-success.html
@@ -1,13 +1,13 @@
-<div class="container w-xxxxl w-auto-xs sign-up-success">
+<div class="container sign-up-success">
   <h3>You did it</h3>
-  <p>We are excited to have you on board!</p>
+  <p>We are excited to <b>have you on board !</b></p>
   <div layout="row" layout-sm="column" class="sign-up-detail">
-    <div flex>
-      <p class="i-box"><i class="icon-envelope"></i></p>
+    <div class="col-sm-6">
+      <p class="i-box"><i class="icon-envelope-alt"></i></p>
       <p>Check your email to confirm your registration(don't forget to check your spam)</p>
     </div>
-    <div flex>
-      <p class="i-box"><i class="icon-envelope"></i></p>
+    <div class="col-sm-5 col-sm-offset-1">
+      <p class="i-box"><i class="icon-comments-alt"></i></p>
       <p>Connect with us for up-to-date information</p>
     </div>
   </div>
