--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -102,154 +102,21 @@
     <div class="banner-col-r">
         <ul>
             <li class="animated fadeInRight">Quicker redirect with 15+ endpoint global</li>
-            <li class="active animated fadeInRight">Manage 3rd affiliate network offers in one panel</li>
-            <li class="animated fadeInRight">More FLEXIBLE report system</li>
-            <li class="animated fadeInRight">Integrate and Manage Traffic Source campaigns</li>
+            <li class="active animated fadeInRight">Half price gain same events and 24*7 skype support</li>
+            <li class="animated fadeInRight">More FLEXIBLE report system</li><br>
+            <li class="animated fadeInRight">First priority using our new features</li>
         </ul>
     </div>
 </div>
 </div>
-
-<div class="swiper-container bidder-menu clearfix">
-    <div class="container">
-        <div class="row">
-            <ul id="myTab" class="swiper-wrapper nav nav-tabs bidder-menu-title">
-                <li class="swiper-slide">
-                    <div class="thumbnail">
-                        <a href="#offer" data-toggle="tab">
-                            <img src="img/bider-icon01.png">
-                            <h2 class="font-orange">Affiliate Offer</h2>
-                            <p class="small-font">A brand new functionality designed exclusively for affiliate network that serves as a partner</p>
-                        </a>
-                    </div>
-                </li>
-                <li class="swiper-slide active">
-                    <div class="thumbnail">
-                        <a href="#trk" data-toggle="tab">
-                            <img src="img/bider-icon02.png">
-                            <h2 class="font-blue">TRK</h2>
-                            <p class="small-font">The golden standard for performance marketing tracking and analytics.</p>
-                        </a>
-                    </div>
-                </li>
-                <li class="swiper-slide">
-                    <div class="thumbnail">
-                        <a href="#dsp" data-toggle="tab">
-                            <img src="img/bider-icon03.png">
-                            <h2 class="font-green">Mobile DSP</h2>
-                            <p class="small-font">Our mobile-display advertising platform fully consolidates and streamlines media buying.</p>
-                        </a>
-                    </div>
-                </li>
-                <li class="swiper-slide">
-                    <div class="thumbnail">
-                        <a href="#integration" data-toggle="tab">
-                            <img src="img/bider-icon04.png">
-                            <h2 class="font-lan">TS Integration</h2>
-                            <p class="small-font">Fully integrate with 20+ Traffic Source ,As such, tracking TS events </p>
-                        </a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
-
 <div class="bider-menu-nr">
     <div class="container">
         <div class="row">
             <div id="myTabContent" class="tab-content">
-                <div class="tab-pane fade" id="offer">
-                    <span class="progress-bar active jz-c-line" style="width:100%;"></span>
-                    <ul class="bider-conten clearfix">
-                        <li class="col-xs-6 col-md-3">
-                            <a href="#">
-                                <img src="img/icon-orange-01.png">
-                                <h3 class="hg">Affiliate Network Offer</h3>
-                                <p class="small-font">Instantly accessing Newbidder for Affiliate Networks</p>
-                            </a>
-                        </li>
-                        <li class="col-xs-6 col-md-3"><a href="#">
-                            <img src="img/icon-orange-02.png">
-                            <h3>Offers From<br/>
-                                10+ Integrated Networks
-                            </h3>
-                            <p class="small-font">Your Affiliate Network will never run dry with a dozen of integration</p>
-                        </a></li>
-                        <li class="col-xs-6 col-md-3"><a href="#">
-                            <img src="img/icon-orange-03.png">
-                            <h3>Best-In-Class<br/>
-                                Fraud Protection
-                            </h3>
-                            <p class="small-font">Click Fraud is the highest threat for PPC campaigns as it can deplete your budget.</p>
-                        </a>
-                        </li>
-                        <li class="col-xs-6 col-md-3"><a href="#"><img src="img/icon-orange-05.png">
-                            <h3 class="hg">White Label Custom</h3>
-                            <p class="small-font">Customizing and managing your own Affilite Networks</p></a></li>
-                    </ul>
-                    <!--<button class="btn all-btn all-orange-btn" type="button">SEE ALL FEATURES</button>!-->
-                </div>
                 <div class="tab-pane fade in active" id="trk">
                     <span class="progress-bar active jz-b-line" style="width: 100%;"></span>
                     <img class="trk-md-img img-responsive" src="img/trk-bg.png">
                     <img class="trk-img img-responsive" src="img/trk-bg-02.png">
-                </div>
-                <div class="tab-pane fade" id="dsp">
-                    <span class="progress-bar active jz-l-line" style="width: 100%;"></span>
-                    <ul class="bider-conten clearfix">
-                        <li class="col-xs-6 col-md-3">
-                            <a href="#">
-                                <img src="img/icon-green-01.png">
-                                <h3 class="hg">Scale</h3>
-                                <p class="small-font">High QPS gives you unprecedented access to the supply universe and better consumers</p>
-                            </a>
-                        </li>
-                        <li class="col-xs-6 col-md-3"><a href="#">
-                            <img src="img/icon-green-02.png">
-                            <h3>Real-time advanced <br/>analytics
-
-                            </h3>
-                            <p class="small-font">Your Affiliate Network will never run dry with a dozen of integrated </p>
-                        </a></li>
-                        <li class="col-xs-6 col-md-3"><a href="#">
-                            <img src="img/icon-green-03.png">
-                            <h3 class="hg">Granular bid control
-                            </h3>
-                            <p class="small-font">Manipulate bid prices across all targets directly within the reporting environment -- visualize and build complex prioritization within a Bid Tree</p>
-                        </a>
-                        </li>
-                        <li class="col-xs-6 col-md-3"><a href="#"><img src="img/icon-green-04.png">
-                            <h3 class="hg">Anti-fraud detection</h3>
-                            <p class="small-font">Brands can feel safe when looking to reach their audience on mobile devices, thanks to our partnership with Pixalate and additional proprietary Anti­fraud technology</p></a></li>
-                        <li class="col-xs-6 col-md-3"><a href="#"><img src="img/icon-green-05.png">
-                            <h3>Advanced Audience <br>Targeting</h3>
-                            <p class="small-font">We’ve partnered with Factual, so that you can target audiences based on their real world behavior, as well as tailor audiences based on their proximity to specified POIs / retailers</p></a></li>
-                        <li class="col-xs-6 col-md-3"><a href="#"><img src="img/icon-green-06.png">
-                            <h3 class="hg">API access</h3>
-                            <p class="small-font">Access our campaign setup process and reporting environment through APIs, as well as our own simple and intuitive UI</p></a></li>
-                        <li class="col-xs-6 col-md-3"><a href="#"><img src="img/icon-green-07.png">
-                            <h3>Flexible <br>Pricing & Service</h3>
-                            <p class="small-font">Customized to fit your needs: managed and self-service options available</p></a></li>
-                    </ul>
-                    <!--<button class="btn all-btn all-green-btn" type="button">SEE ALL FEATURES</button>!-->
-                </div>
-                <div class="tab-pane fade" id="integration">
-                    <span class="progress-bar active jz-h-line" style="width: 100%;"></span>
-                    <ul class="bider-conten clearfix">
-                    <li class="col-xs-6 col-md-3"><a href="#"><img src="img/icon-lan-01.png">
-                        <h3>Seamless Integration<br/>with Traffic Sources</h3>
-                        <p class="small-font">we have integrated with 20+ traffic sources, dynamic synchronize data from integrated traffic source </p></a></li>
-                    <li class="col-xs-6 col-md-3"><a href="#"><img src="img/icon-lan-02.png">
-                        <h3>Real-Time Report distribute<br/>from Traffic Source</h3>
-                        <p class="small-font">Centralized traffic source report to one panel in our system with checkable parameter report as well.</p></a></li>
-                    <li class="col-xs-6 col-md-3"><a href="#"><img src="img/icon-lan-03.png">
-                        <h3>Real Cost distribution to<br/>various dimensions accordingly</h3>
-                        <p class="small-font">Pull data from different traffic sources and distributing dynamic in term of dimensions and timezone.</p></a></li>
-                    <li class="col-xs-6 col-md-3"><a href="#"><img src="img/icon-lan-04.png">
-                        <h3 class="hg">Manage the Campaign</h3>
-                        <p class="small-font">You can make some simple actions to the campaign from different traffic sources in our system simultaneously</p></a></li>
-                    </ul>
                 </div>
             </div>
         </div>
@@ -292,7 +159,6 @@
                         <li>Skype Support 24/7</li>
                         <li>3 month data <b>retention</b></li>
                         <li>1 custom tracking <b>domains</b></li>
-                        <li>Newbidder DSP (event not included)</li>
                     </ol>
                     <!--<button class="btn p-btn btn-three p-btn-01" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>-->
 
@@ -308,13 +174,12 @@
                  </div>
                  <div class="pricedesc">
                      <p>1000000 included events</p>
-                     <p>0.035/1000 overage charge</p>
+                     <p>0.049/1000 overage charge</p>
                  </div>
                  <ol class="pricedesc-list">
                      <li>Skype Support 24/7</li>
                      <li>6 month data <b>retention</b></li>
                      <li>5 custom tracking <b>domains</b></li>
-                     <li>Newbidder DSP (event not included)</li>
                      <li>1 additional users</li>
                      <li>10% volume discount</li>
                  </ol>
@@ -331,13 +196,12 @@
            </div>
            <div class="pricedesc">
                <p>10000000 included events</p>
-           <p>0.03/1000 overage charge</p>
+           <p>0.02/1000 overage charge</p>
            </div>
            <ol class="pricedesc-list">
                <li>Skype Support 24/7</li>
                <li>1 year data <b>retention</b></li>
                <li>10 custom <b>tracking domains</b></li>
-               <li>Newbidder DSP (event not included)</li>
                <li>2 additional users</li>
                <li>15% volume discount</li>
            </ol>
@@ -353,14 +217,13 @@
                     <small class="money-small">/ Mon</small>
                 </div>
                 <div class="pricedesc">
-                    <p>10000000 included events</p>
-                <p>0.025/1000 overage charge</p>
+                    <p>30000000 included events</p>
+                <p>0.017/1000 overage charge</p>
                 </div>
                 <ol class="pricedesc-list">
                     <li>Skype Support 24/7</li>
                     <li>2 year data <b>retention</b></li>
                     <li>30 custom <b>tracking domains</b></li>
-                    <li>Newbidder DSP (event not included)</li>
                     <li>5 additional users</li>
                     <li>20% volume discount</li>
                 </ol>
@@ -399,7 +262,7 @@
                         </div>
                         <div class="col-md-1 col-sm-1 separator"><span></span></div>
                         <div class="col-md-3 col-sm-3 col-xs-12">
-                            Overages <i class="icon-question-sign" data-toggle="tooltip" title="Overages are events that exceed the included events in a given paid plan. Plans are paid for upfront, overages are paid at the end of the monthly billing cycle."></i>   : <span><span class="dolar">$</span><span class="overages">0</span></span>
+                            Overages : <span><span class="dolar">$</span><span class="overages">0</span></span>
                             <span class="caption"><span class="overagesEvents">0</span> extra events</span>
                         </div>
                     </section>
@@ -420,26 +283,6 @@
             <td><b>Thrivetracker</b></td>
             <td><b>CPVLab</b></td>
             <td><b>Newbidder</b></td>
-        </tr>
-        <tr>
-            <td>Integrate <br>3rd Party <br>Traffic Source</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>Integrate 10+  TS</td>
-        </tr>
-        <tr>
-            <td>INNER DSP</td>
-            <td></td>
-            <td>Beta Test</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>DSP integrate with 20+ AdX</td>
         </tr>
         <tr>
             <td>Funnel Heat <br>Maps</td>
@@ -628,7 +471,6 @@
                     <h4>Product</h4>
                     <ul class="product-box">
                         <li><img src="img/f-icon-01.png">Newbidder TRK</li>
-                        <li><img src="img/f-icon-02.png">Newbidder DSP</li>
                     </ul>
                 </div>
                 </div>
