--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -39,7 +39,7 @@
 <md-sidenav class="md-sidenav-left md-whiteframe-z2 cs-left-aside">
     <nav ui-nav class="navi clearfix">
         <ul class="nav">
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" has-permission="dashboard">
                 <a ui-sref="app.dashboard" md-ink-ripple>
                     <i class="icon-dashboard"></i>
                     <span>{{'dashBoard' | translate}}</span>
