modify user permission

--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -99,7 +99,7 @@
 <script src="js/controllers/dashBoard.js"></script>
 <script src="js/controllers/conversion.js"></script>
 <script src="js/controllers/tsReport.js"></script>
-<script src="js/services/permission.js"></script>
+<script src="js/directives/permission.js"></script>
 <!-- endbuild -->
 
 </body>
