--- a/Front/src/tpl/setApp.html
+++ b/Front/src/tpl/setApp.html
@@ -37,61 +37,61 @@
 <md-sidenav class="md-sidenav-left md-whiteframe-z2 cs-left-aside">
     <nav ui-nav class="navi clearfix">
         <ul class="nav">
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" has-permission="setting.profile.show" operation="show">
                 <a ui-sref="setApp.profile" md-ink-ripple>
                     <i class="icon-list-alt"></i>
                     <span>{{'profile' | translate}}</span>
                 </a>
             </li>
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" has-permission="setting.referralProgram.show" operation="show">
                 <a ui-sref="setApp.referralProgram" md-ink-ripple>
                     <i class="icon-laptop"></i>
                     <span>{{'referralProgram' | translate}}</span>
                 </a>
             </li>
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" has-permission="setting.subscriptions.show" operation="show">
                 <a ui-sref="setApp.subscriptions" md-ink-ripple>
                     <i class="icon-star"></i>
                     <span>{{'subscriptions' | translate}}</span>
                 </a>
             </li>
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" has-permission="setting.domain.show" operation="show">
                 <a ui-sref="setApp.domain" md-ink-ripple>
                     <i class="icon-link"></i>
                     <span>{{'domain' | translate}}</span>
                 </a>
             </li>
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" has-permission="setting.setup.show" operation="show">
                 <a ui-sref="setApp.setUp" md-ink-ripple>
                     <i class="icon-cog"></i>
                     <span>{{'setUp' | translate}}</span>
                 </a>
             </li>
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" has-permission="setting.userManagement.show" operation="show">
                 <a ui-sref="setApp.userManagement" md-ink-ripple>
                     <i class="icon-user"></i>
                     <span>{{'userManagement' | translate}}</span>
                 </a>
             </li>
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" has-permission="setting.blackList.show" operation="show">
                 <a ui-sref="setApp.botBlacklist" md-ink-ripple>
                     <i class="icon-list-ul"></i>
                     <span>{{'botBlacklist' | translate}}</span>
                 </a>
             </li>
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" has-permission="setting.invoices.show" operation="show">
                 <a ui-sref="setApp.invoices" md-ink-ripple>
                     <i class="icon-file"></i>
                     <span>{{'invoices' | translate}}</span>
                 </a>
             </li>
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" has-permission="setting.eventLog.show" operation="show">
                 <a ui-sref="setApp.eventLog" md-ink-ripple>
                     <i class="icon-th-list"></i>
                     <span>{{'eventLog' | translate}}</span>
                 </a>
             </li>
-            <li ui-sref-active="active">
+            <li ui-sref-active="active" has-permission="setting.conversionUpload.show" operation="show">
                 <a ui-sref="setApp.conversionUpload" md-ink-ripple>
                     <i class="icon-cloud-upload"></i>
                     <span>{{'conversionUpload' | translate}}</span>
