--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -116,7 +116,7 @@
             <tr md-row>
                 <th md-column ng-if="treeLevel>1"></th>
                 <th md-column md-order-by="{{item.key}}" ng-repeat="item in columns"
-                    ng-show="preferences.reportViewColumns[item.key].visible || (item.role=='name' && treeLevel>1)">{{item.name}}
+                    ng-show="preferences.reportViewColumns[item.key].visible || item.role=='name'">{{item.name}}
                 </th>
             </tr>
             </thead>
@@ -130,7 +130,7 @@
                      ng-click="toggleRow(row)">keyboard_arrow_right</i></td>
                 <td md-cell
                     ng-repeat="column in columns"
-                    ng-show="preferences.reportViewColumns[column.key].visible  || (column.role=='name' && treeLevel>1)">
+                    ng-show="preferences.reportViewColumns[column.key].visible  || column.role=='name'">
                     <!--ng-click="openMenu($event, row, column.role)"-->
                   <span ng-if="column.role=='name' && treeLevel==1">
                     <md-menu-bar style="padding: 0;">
@@ -163,8 +163,7 @@
             <tfoot md-body>
               <tr md-row>
                 <td md-cell ng-if="treeLevel>1"></td>
-                <td md-cell ng-if="treeLevel>1">Total</td>
-                <td md-cell ng-if="preferences.reportViewColumns[columns[0].key].visible">Total</td>
+                <td md-cell>Total</td>
                 <td md-cell ng-repeat="column in columns" ng-show="preferences.reportViewColumns[column.key].visible && !$first">
                   {{isNeedCurrency(column.key) ? (report.totals[column.key] | currency) : (isNeedPercent(column.key) ? ((report.totals[column.key] || 0) + '%') : report.totals[column.key])}}
                 </td>
